[project]
name = "ytmusicapi"
version="1.0.0" 
description = "Unofficial API for YouTube Music"
requires-python = ">=3.10"
authors=[{name = "sigma67", email= "ytmusicapi@gmail.com"}]
license={file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests >= 2.22",
]
dynamic = ["readme"]

[project.scripts]
ytmusicapi = "ytmusicapi.setup:main"

[project.urls]
homepage = "https://github.com/sigma67/ytmusicapi"
documentation = "https://ytmusicapi.readthedocs.io"
repository = "https://github.com/sigma67/ytmusicapi"

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}


[tool.setuptools]
include-package-data=false

# ... the rest of the file (pytest, ruff, etc.) remains the same
